<resources>
    <string name="app_name">AppConBD</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_register">Registrarse</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
</resources>
